Fixed icon alignment

--- a/_includes/_css/style.css
+++ b/_includes/_css/style.css
@@ -66,7 +66,8 @@ h1 {
 }
 h2 {
 	font-size: 1.500em;
-	margin: 0 0 0.625em 0;
+	line-height: 1.375em;
+	margin: 0 0 0.500em 0;
 }
 h2 svg {
 	margin: 0 0.563em 0 0;
@@ -252,7 +253,7 @@ input {
 	padding: 6%;
 }
 #intro h2 {
-	margin: 0 0 1.250em 0;
+	margin: 0 0 1.000em 0;
 }
 /* Download Buttons */
 
